app/style.css
/* ... */
.tabbedContainer-slide > * {
    margin-bottom: 12px;
}

/*
    Forms
*/
.form {
    display: flex;
    flex-direction: column;
}

.form label {
    display: block;
    font-size: 0.9em;
    margin-bottom: 8px;
}

.form input {
    height: 48px;
    padding: 8px;
    border: none;
    border-radius: 6px;
    margin-bottom: 24px;
    background-color: rgba(255,255,255, var(--overlay-opacity-1));
    color: var(--color-text);
    font-size: 1em;
}

.form button[type=submit] {
    margin-top: 24px;
}

/*
    Lists
*/
ul.list {
    list-style: none;
    margin: 0;
    padding: 0;
}

.list-item {
    display: flex;
    flex-direction: column;
    padding: 8px 16px;
    margin-bottom: 24px;
    /* background: var(--color-background-1); */
}

.list-item p {
    margin: 0 0 8px 0;
}

.list-item .text--small {
    font-size: 0.8em;
    color: var(--color-text-secondary-1);
}

/*
    Show info
*/
.showSummary-title {
    font-size: 1em;
}

.showSummary-location,
.showSummary-date {
    display: inline-block;
    font-size: 0.7em;
}

.showSummary-date {
    margin-right: 0.5em;
}

.showSummary-location::before,
.showSummary-date::before {
    display: inline-block;
    content: '\f3c5';
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    font-size: 0.8em;
    margin-right: 4px;
    vertical-align: middle;
}

.showSummary-location::before {
    content: '\f3c5';
}

.showSummary-date::before {
    content: '\f073';
}

/*
    All pages
*/
.page {
    position: relative;
    background: linear-gradient(165deg, rgba(var(--color-primary-rgb), 0.2), var(--color-background) 30%);
    animation: fade-in .3s ease-out;
    height: 100%;
}

.page > .header > .header-content > h1 {
    margin-top: 0;
}

.page > main,
.page > .header {
    max-width: 848px;
    margin-left: auto;
    margin-right: auto;
}

/*
    Homepage
*/
.page.page--home {
    animation: zoom-out .3s ease;
    background: unset;
}

.page--home .header {
    height: 30%;
    min-height: 220px;
    max-height: 280px;
    max-width: none;
}

.page--home .header-bg {
    background-image: url(res/header-bg.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.page--home .header-bg-filter {
    background: linear-gradient(160deg, var(--color-primary) 0%, var(--color-secondary) 90%, var(--color-background) 100%);
    mix-blend-mode: multiply;
}

.page--home .header-bg-blend {
    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 70%, var(--color-background) 100%);
}

.page--home .navbar--raised {
    background-color: var(--color-primary);
}

.page--home > main {
    position: relative;
    max-width: 1104px;
}

.page--home > main > div {
    margin-bottom: 16px;
}

.page--home .slider-slide {
    max-width: 320px;
    max-height: 220px;
}

.page--home .tabbedContainer {
    max-width: 600px;
    margin-left: auto;
    margin-right: auto;
}

.page--home .tabbedContainer-slide .card {
    max-width: 400px;
    margin: 0 auto;
}

/*
    Show, Artist and Venue pages
*/
.page.page--show,
.page.page--artist,
.page.page--venue {
    background: unset;
}

.page--show .header,
.page--artist .header,
.page--venue .header {
    height: 50%;
    max-width: unset;
}

.page--show .header-bg,
.page--artist .header-bg,
.page--venue .header-bg {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top;
}

.page--show .header-bg-blend,
.page--artist .header-bg-blend,
.page--venue .header-bg-blend {
    background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 0%, var(--color-background) 100%);
}

.page--show .header-content,
.page--artist .header-content,
.page--venue .header-content {
    padding: 0 24px;
}

.page.page--show .header-content > h1,
.page.page--artist .header-content > h1,
.page.page--venue .header-content > h1 {
    margin-top: auto;
    margin-bottom: 48px;
    text-align: center;
}

.page--show main,
.page--artist main,
.page--venue main {
    position: relative;
    margin-top: -24px;
    padding: 0 24px 24px 24px;
}

.page--show h4,
.page--artist h4,
.page--venue h4 {
    margin: 24px 0 8px 0;
}

.page--show p,
.page--artist p,
.page--venue p {
    margin: 0;
}

.page--show .showInfoList a {
    text-decoration: underline;
    color: var(--color-text);
}

ul.showInfoList {
    list-style: none;
    margin: 0;
    padding-left: 1.5em; /* the .5 is there to account for the 1em width of .showInfoList li>i */
    text-indent: -1em;
}

.showInfoList li {
    line-height: 1.8em;
}

.showInfoList li>i {
    width: 1em;
    font-size: 0.7em;
    text-align: center;
}

.buyButtonContainer {
    text-align: center;
    margin-bottom: 24px;
}

/*
    Buy page
*/
.page--buy .buyStep {
    animation: fade-in .3s ease-out;
}

.page--buy .btnNext {
    margin-top: 40px;
}

.page--buy .ticketTypeList {
    margin-top: 40px;
    animation: slide-up .3s ease;
}

.page--buy .buttons {
    margin-top: 40px;
}

.buyStep {
    display: flex;
    flex-direction: column;
    min-height: 100%;
    padding: 24px;
    padding-top: 56px;
}

.buyStep.buyStep--hidden {
    display: none;
}

.buyStep--quantity span.ticketType {
    color: var(--color-primary);
    font-style: italic;
}

.ticketTypeList {
    list-style: none;
    padding: 0;
}

.ticketTypeList > li {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 12px 16px;
    margin-bottom: 16px;
    border-radius: 6px;

    background-color: var(--color-background-1);
    box-shadow: var(--shadow-1);
    border-left: 2px solid transparent;

    transition: background-color .1s ease, box-shadow .1s ease, border-left .1s ease;
}

.ticketTypeList > li.ticketType--selected {
    background-color: var(--color-background-3);
    box-shadow: var(--shadow-3);
    border-left: 2px solid var(--color-primary);
}

.ticketTypeList > li .ticketType-name {
    margin-right: 1em;
}

.ticketTypeList > li .ticketType-price {
    margin-left: auto;
    font-size: 0.9em;
    white-space: nowrap;
}
/* ... */

